--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="container">
         <h1>WAPH Team 12</h1>
         <div class="member">
-            <img src="/main/headshot.jpg" alt="Member">
+            <img src="../headshot.jpg" alt="Member">
             <div class="member-info">
                 <h2>Muhanad Al-Khasawneh</h2>
                 <a href="https://Khasawneh99.github.io">Site</a>
