--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
             </div>
         </div>
         <div class="member">
-            <img src="/main/profilepicresize.jpg" alt="Member">
+            <img src="https://github.com/waph-team12-sm24/waph-team12-sm24.github.io/blob/main/profilepicresize.jpg" alt="Member">
             <div class="member-info">
                 <h2>Muneer Al-Khasawneh</h2>
                 <a href="https://muneery.github.io">Site</a>
             </div>
         </div>
         <div class="member">
-            <img src="main/ayushi headshot.jpg" alt="Member">
+            <img src="https://github.com/waph-team12-sm24/waph-team12-sm24.github.io/blob/main/ayushi%20headshot.jpg" alt="Member">
             <div class="member-info">
                 <h2>Ayushi Sharma</h2>
                 <a href="https://sharm4ai.github.io">Site</a>
